--- a/src/configurations/robot_localization/navsat_transform.yaml
+++ b/src/configurations/robot_localization/navsat_transform.yaml
@@ -2,7 +2,7 @@ frequency: 30
 delay: 3
 magnetic_declination_radians: 0.0349066 #check!!
 yaw_offset: 1.570796
-zero_altitude: true
+zero_altitude: false
 broadcast_utm_transform: true
 broadcast_utm_transform_as_parent_frame: true
 publish_filtered_gps: false
