--- a/src/configurations/robot_localization/ekf_global.yaml
+++ b/src/configurations/robot_localization/ekf_global.yaml
@@ -1,9 +1,8 @@
 frequency: 30
 sensor_timeout: 0.1
-two_d_mode: true
+two_d_mode: false #TRUE = 0 --> Z, roll, pitch, their respective velocities, and Z acceleration 
 transform_time_offset: 0.05
 transform_timeout: 0.0
-#predict_to_current_time: true 
 print_diagnostics: true
 debug: false
 publish_tf: true
@@ -21,13 +20,12 @@ world_frame: map
 #                 acc_x,    acc_y,    acc_z]
 
 odom0: rtabmap/rgbd_odom
-odom0_config: [true, true, true,
-               true, false, false,
+odom0_config: [false, false, false,
                false, false, false,
-               false, false, true,
+               false, false, false,
+               false, false, false,
                false, false, false]
-
-odom0_queue_size: 5
+odom0_queue_size: 10
 odom0_nodelay: true
 odom0_differential: true
 odom0_relative: false
@@ -35,29 +33,28 @@ odom0_pose_rejection_threshold: 50
 odom0_twist_rejection_threshold: 50
 
 odom1: ekf/gps_converted_odom
-odom1_config: [true,  true,  true,
+odom1_config: [ true,  true,  true,
                 false, false, false,
                 false, false, false,
                 false, false, false,
                 false, false, false]
-odom1_queue_size: 2
 odom1_nodelay: true
 odom1_differential: false
 odom1_relative: false
         
 imu0: imu/data
 imu0_config: [false, false, false,
+              true, true, true,
               false, false, false,
-              false, false, false,
-              false, false, true,
-              false, false, false]
+              true, true, true,
+              true, true, true]
 imu0_nodelay: false
 imu0_differential: false
 imu0_relative: false
-imu0_queue_size: 50
-imu0_pose_rejection_threshold: 50                 # Note the difference in parameter names
-imu0_twist_rejection_threshold: 50               #
-imu0_linear_acceleration_rejection_threshold: 50  #
+imu0_queue_size: 10
+imu0_pose_rejection_threshold: 50                 
+imu0_angular_velocity_rejection_threshold: 50               
+imu0_linear_acceleration_rejection_threshold: 50  
 
 # [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
 # this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
