--- a/src/configurations/robot_localization/ekf_local.yaml
+++ b/src/configurations/robot_localization/ekf_local.yaml
@@ -1,9 +1,8 @@
 frequency: 30
 sensor_timeout: 0.1
-two_d_mode: true
+two_d_mode: false #TRUE = 0 --> Z, roll, pitch, their respective velocities, and Z acceleration 
 transform_time_offset: 0.05
 transform_timeout: 0.0
-#predict_to_current_time: true 
 print_diagnostics: true
 debug: false
 publish_tf: true
@@ -22,31 +21,32 @@ world_frame: odom
 
 odom0: rtabmap/rgbd_odom
 odom0_config: [false, false, false,
-               true, false, false,
+               false,  false, false,
                false, false, false,
-               false, false, true,
+               false, false, false,
                false, false, false]
-odom0_queue_size: 5
+odom0_queue_size: 10
 odom0_nodelay: false
 odom0_differential: false
 odom0_relative: false
+
 odom0_pose_rejection_threshold: 50
 odom0_twist_rejection_threshold: 50
 
 imu0: imu/data
 imu0_config: [false, false, false,
+              true, true, true,
               false, false, false,
-              false, false, false,
-              false, false, true,
-              false, false, false]
+              true, true, true,
+              true, true, true]
 imu0_nodelay: false
 imu0_differential: false
 imu0_relative: false
-imu0_queue_size: 5
-imu0_pose_rejection_threshold: 50                 # Note the difference in parameter names
-imu0_twist_rejection_threshold: 50                #
-imu0_linear_acceleration_rejection_threshold: 50  #
+imu0_queue_size: 10
 
+imu0_pose_rejection_threshold: 50                 
+imu0_angular_velocity_rejection_threshold: 50                
+imu0_linear_acceleration_rejection_threshold: 50  
 
 # [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
 # this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
